# tmpltr

./: CMakeLists.txt  readme.md
include/: tmpltr.hpp
include/utils/: utils.hpp
src/: main.cpp
src/actions/: del.cpp  mv.cpp  new.cpp  use.cpp
src/utils/: utils.cpp
